# Masteringndk

./: .gitignore  README.md
01_NDK/: build.gradle  local.properties  settings.gradle
01_NDK/app/src/main/: AndroidManifest.xml
01_NDK/app/src/main/cpp/: CMakeLists.txt
01_NDK/app/src/main/java/com/vertexacademy/masteringndk/: App1Activity.java
01_ndk/: build.gradle  local.properties  settings.gradle  vertexacad_key  vertexacad_key.pub
01_ndk/app/: build.gradle
01_ndk/app/src/main/: AndroidManifest.xml
01_ndk/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
01_ndk/app/src/main/java/vertexacademy/com/masteringndk/: App1Activity.java
01_ndk/app/src/main/res/values/: strings.xml
02_NDK/: .gitignore  02_NDK.sublime-workspace  build.gradle  local.properties  settings.gradle
02_NDK/app/: build.gradle
02_NDK/app/src/main/: AndroidManifest.xml
02_NDK/app/src/main/cpp/: CMakeLists.txt  FIEngine.cpp  FIEngine.h  FT_Utils.cpp  FT_Utils.h  native-lib.cpp
02_NDK/app/src/main/java/com/vertexacademy/masteringndk/: App1Activity.java  AudioEngine.java
02_NDK/app/src/main/res/layout/: main.xml
02_NDK/app/src/main/res/values/: strings.xml  styles.xml
02_ndk/: .gitignore  build.gradle  local.properties  settings.gradle
02_ndk/app/: build.gradle
02_ndk/app/src/main/: AndroidManifest.xml
02_ndk/app/src/main/cpp/: CMakeLists.txt
02_ndk/app/src/main/java/com/vertexacademy/masteringndk/: App1Activity.java
ndk_template/: local.properties  settings.gradle
ndk_template/app/: build.gradle
ndk_template/app/src/main/: AndroidManifest.xml
ndk_template/app/src/main/cpp/: CMakeLists.txt
ndk_template/app/src/main/java/: App1Activity.java
ndk_template/app/src/main/res/values/: strings.xml
template/: build.gradle  settings.gradle
template/app/: build.gradle
template/app/src/main/: AndroidManifest.xml
template/app/src/main/res/values/: strings.xml
